...
      .onEnded(handleSwipeEnd)
  }

  private var addButton: some ToolbarContent {
    ToolbarItem {
      Button(action: { showingAddSheet = true }) {
        Label("Add", systemImage: "plus")
      }
    }
  }

  private var editingTransactionBinding: Binding<Bool> {
    Binding<Bool>(
...
